--- a/SphereOpt.csproj
+++ b/SphereOpt.csproj
@@ -35,4 +35,12 @@
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Remove="shaders\CGIncludes\DSPCommon.cginc" />
+    <None Remove="shaders\Dyson Shell Unlit Instanced.shader" />
+    <None Remove="shaders\Frame Inst REPLACE.shader" />
+    <None Remove="shaders\Frame LOD.compute" />
+    <None Remove="shaders\Node Inst REPLACE.shader" />
+  </ItemGroup>
 </Project>
